--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -30,67 +30,38 @@ $phones: 480px;
 
 .learn {
 	@extend .sprites-sprite;
-	width: 129px / 215px * 100%;
-	height: 78px / 130px * 100%;
-	background-position: 0 10.4%;
-	background-size: 181% 512%;
-	margin: 30px 0 0px 20%;
-	float: left;
-	@media screen and (max-width: $phones) {
-		width: 129px / 134.469px * 0.5 * 100%;
-		height: 78px / 130px * 0.5 * 100%;
-		background-size: 179% 522%;
-		margin: 50px 0 0px 30%; 
-	}
-}
+	width: 129px;
+	height: 78px;
+	background-position: 0 10%;
+	background-size: initial;
+	margin: 30px auto;
+ }
 
 .research {
 	@extend .sprites-sprite;
-	width: 68px / 215px * 100%;
-	height: 68px / 130px * 100%;
+	width: 68px;
+	height: 68px;
 	background-position: 0 100%;
-	background-size: 344% 575%;
-	margin: 35px 0px 0px 35%;
-	float: left;
-	@media screen and (max-width: $phones) {
-		width: 68px / 134.469px  * 0.5 * 100%;
-		height: 68px / 130px  * 0.5 * 100%;
-		margin: 50px 0 0 35%;
-	}
+ 	margin: 30px auto;
 }
 
 .calendar {
 	@extend .sprites-sprite;
-	width: 54px / 215px * 100%;
-	height: 62px / 130px * 100%;
-	background-position: 0 33%;
-	background-size: 435% 617%;
-	float: left;
-	margin: 35px 0px 0px 38%;
-	@media screen and (max-width: $phones) {
-		width: 54px / 134.469px * 0.60 * 100%;
-		height: 62px / 130px  * 0.60 * 100%;
-		margin: 50px 0 0 40%;
-
+	width: 54px;
+	height: 62px;
+	background-position: 0 33.3%;
+ 	margin: 30px auto;
+	@media screen and (min-width: 800px) and (max-width: $tablets) {
+		//margin-left: auto;
 	}
 }
 
 .heart {
 	@extend .sprites-sprite;
-	width: 63px / 215px * 100%;
-	height: 63px / 130px * 100%;
+	width: 64px;
+	height: 63px;
 	background-position: 0 52%;
-	background-size: 366% 623%;
-	float: left;
-	margin: 35px 0px 0px 35%;
-	@media screen and (max-width: $phones) {
-		width: 63px / 134.469px * 0.6 100%;
-		height: 63px / 130px * 0.6 * 100%;
-		background-size: 355% 627%;
-		margin: 50px 0px 0px 35%;
-
-	}
-
+ 	margin: 30px auto;
 }
 
 // COLORS
@@ -122,6 +93,7 @@ text-align: center;
 	text-transform: uppercase;
 		@media screen and (max-width: $tablets) {
 		font-size: 0.75rem;
+		margin-left: 25px;
 		}
 		@media screen and (max-width: $phones) {
 		width: 100%;
@@ -196,8 +168,8 @@ hr {
 	}
 
 	@media screen and (max-width: $phones) {
-		width: 430px / 959.25px * 100%;
-		margin-left: 19.85px / 959.25px * 100%;
+		width: 860px / 959.25px * 100%;
+		//margin-left: 19.85px / 959.25px * 100%;
 	}
 	
 	span {
@@ -212,6 +184,7 @@ hr {
 		width: 100%;
 		height: 130px;
 		background-color: $blue;
+		float: left;
 	}
 
 	p {
@@ -220,6 +193,7 @@ hr {
 		font-size: 14px;
 		font-weight: 300;
 		margin: 10px 0 10px 0;
+		float: right;
 		@media screen and (max-width: $phones) {
 			font-size: 12px;
 		}
