--- a/js/jquery-ui-1.11.4.custom/jquery-ui.css
+++ b/js/jquery-ui-1.11.4.custom/jquery-ui.css
@@ -160,7 +160,7 @@
 .ui-datepicker td a {
 	display: block;
 	padding: .2em;
-	text-align: right;
+	text-align: center;
 	text-decoration: none;
 }
 .ui-datepicker .ui-datepicker-buttonpane {
@@ -255,7 +255,7 @@
 /* Component containers
 ----------------------------------*/
 .ui-widget {
-	font-family: Verdana,Arial,sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 1.1em;
 }
 .ui-widget .ui-widget {
@@ -265,25 +265,25 @@
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
-	font-family: Verdana,Arial,sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 1em;
 }
 .ui-widget-content {
-	border: 1px solid #aaaaaa;
-	background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
-	color: #222222;
+	
+	background: #8287a6;
+	color: #3d404e;
 }
 .ui-widget-content a {
-	color: #222222;
+	color: #3d404e;
 }
 .ui-widget-header {
-	border: 1px solid #aaaaaa;
-	background: #cccccc url("images/ui-bg_highlight-soft_75_cccccc_1x100.png") 50% 50% repeat-x;
-	color: #222222;
+	border-bottom: 2px solid #3d404e;
+	background: #8287a6;
+	color: #3d404e;
 	font-weight: bold;
 }
 .ui-widget-header a {
-	color: #222222;
+	color: #3d404e;
 }
 
 /* Interaction states
@@ -291,15 +291,14 @@
 .ui-state-default,
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
-	border: 1px solid #d3d3d3;
-	background: #e6e6e6 url("images/ui-bg_glass_75_e6e6e6_1x400.png") 50% 50% repeat-x;
+ 	background: #8287a6;
 	font-weight: normal;
-	color: #555555;
+	color: #3d404e;
 }
 .ui-state-default a,
 .ui-state-default a:link,
 .ui-state-default a:visited {
-	color: #555555;
+	color: #3d404e;
 	text-decoration: none;
 }
 .ui-state-hover,
@@ -308,10 +307,9 @@
 .ui-state-focus,
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
-	border: 1px solid #999999;
-	background: #dadada url("images/ui-bg_glass_75_dadada_1x400.png") 50% 50% repeat-x;
+ 	background: #8287a6;
 	font-weight: normal;
-	color: #212121;
+	color: #3d404e;
 }
 .ui-state-hover a,
 .ui-state-hover a:hover,
@@ -321,22 +319,24 @@
 .ui-state-focus a:hover,
 .ui-state-focus a:link,
 .ui-state-focus a:visited {
-	color: #212121;
+	color: #3d404e;
 	text-decoration: none;
 }
 .ui-state-active,
 .ui-widget-content .ui-state-active,
 .ui-widget-header .ui-state-active {
-	border: 1px solid #aaaaaa;
-	background: #ffffff url("images/ui-bg_glass_65_ffffff_1x400.png") 50% 50% repeat-x;
+	 
+	background: #8287a6;
 	font-weight: normal;
-	color: #212121;
+	color: #3d404e;
 }
 .ui-state-active a,
 .ui-state-active a:link,
 .ui-state-active a:visited {
 	color: #212121;
 	text-decoration: none;
+	border: 1px solid #3d404e;
+
 }
 
 /* Interaction Cues
@@ -344,19 +344,20 @@
 .ui-state-highlight,
 .ui-widget-content .ui-state-highlight,
 .ui-widget-header .ui-state-highlight {
-	border: 1px solid #fcefa1;
-	background: #fbf9ee url("images/ui-bg_glass_55_fbf9ee_1x400.png") 50% 50% repeat-x;
+ 	background: #8287a6;
 	color: #363636;
 }
 .ui-state-highlight a,
 .ui-widget-content .ui-state-highlight a,
 .ui-widget-header .ui-state-highlight a {
 	color: #363636;
+	border: 1px solid #3d404e;
+
 }
 .ui-state-error,
 .ui-widget-content .ui-state-error,
 .ui-widget-header .ui-state-error {
-	border: 1px solid #cd0a0a;
+	border: 1px solid #8287a6;
 	background: #fef1ec url("images/ui-bg_glass_95_fef1ec_1x400.png") 50% 50% repeat-x;
 	color: #cd0a0a;
 }
@@ -580,9 +581,9 @@
 .ui-icon-circle-plus { background-position: 0 -192px; }
 .ui-icon-circle-minus { background-position: -16px -192px; }
 .ui-icon-circle-close { background-position: -32px -192px; }
-.ui-icon-circle-triangle-e { background-position: -48px -192px; }
+.ui-icon-circle-triangle-e { background-position: -35px 0px; }
 .ui-icon-circle-triangle-s { background-position: -64px -192px; }
-.ui-icon-circle-triangle-w { background-position: -80px -192px; }
+.ui-icon-circle-triangle-w { background-position: -95px 0px; }
 .ui-icon-circle-triangle-n { background-position: -96px -192px; }
 .ui-icon-circle-arrow-e { background-position: -112px -192px; }
 .ui-icon-circle-arrow-s { background-position: -128px -192px; }
@@ -613,26 +614,22 @@
 .ui-corner-top,
 .ui-corner-left,
 .ui-corner-tl {
-	border-top-left-radius: 4px;
-}
+ }
 .ui-corner-all,
 .ui-corner-top,
 .ui-corner-right,
 .ui-corner-tr {
-	border-top-right-radius: 4px;
-}
+ }
 .ui-corner-all,
 .ui-corner-bottom,
 .ui-corner-left,
 .ui-corner-bl {
-	border-bottom-left-radius: 4px;
-}
+ }
 .ui-corner-all,
 .ui-corner-bottom,
 .ui-corner-right,
 .ui-corner-br {
-	border-bottom-right-radius: 4px;
-}
+ }
 
 /* Overlays */
 .ui-widget-overlay {
