--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,24 +1,39 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-@import "compass/reset";
-@import "slick";
 
-@import "sprites/*.png";
+@import "compass/reset",
+"slick",
+"sprites/*.png";
+ 
+
 
 // DEVICES
 $tablets: 1024px;
 $phones: 480px;
-// MIXINS
+ 
+
+// COLORS
+$blue: #3d404e;
+$lblue: #8287a6;
+
+// TYPOGRAPHY
+$open: 'Open Sans', sans-serif;
+$old: 'Old Standard TT', serif;
+
+
+//INTRO SECTION
+body {
+	color: $blue;
+}
 
 
 
+// SPRITES
 .sprites-sprite {
 	background-image: url('../images/sprites-s33dfd1dc59.png');
 	background-repeat: no-repeat;
  }
+
+
 
 .sprite-logo {
 	@extend .sprites-sprite;
@@ -32,7 +47,7 @@ $phones: 480px;
 	@extend .sprites-sprite;
 	width: 129px;
 	height: 78px;
-	background-position: 0 10%;
+	background-position: 0 -32px;
 	background-size: initial;
 	margin: 30px auto;
  }
@@ -41,7 +56,7 @@ $phones: 480px;
 	@extend .sprites-sprite;
 	width: 68px;
 	height: 68px;
-	background-position: 0 100%;
+	background-position: 0 -325px;
  	margin: 30px auto;
 }
 
@@ -49,7 +64,7 @@ $phones: 480px;
 	@extend .sprites-sprite;
 	width: 54px;
 	height: 62px;
-	background-position: 0 33.3%;
+	background-position: 0 -110px;
  	margin: 30px auto;
 	@media screen and (min-width: 800px) and (max-width: $tablets) {
 		//margin-left: auto;
@@ -60,37 +75,27 @@ $phones: 480px;
 	@extend .sprites-sprite;
 	width: 64px;
 	height: 63px;
-	background-position: 0 52%;
+	background-position: 0 -172px;
  	margin: 30px auto;
 }
 
-// COLORS
-$blue: #3d404e;
 
-// TYPOGRAPHY
-$open: 'Open Sans', sans-serif;
-$old: 'Old Standard TT', serif;
-
-
-
-
-//INTRO SECTION
-body {
-	color: $blue;
+section {
+	width: 100%;
+	float: left;
+	margin: 25px 0 25px 0;
 }
 
-
-
 #nav {
-margin: 0 0 25px auto;
-text-align: center;
+	margin: 0 0 25px auto;
+	text-align: center;
  	li {
- 	font-size: 13px;
- 	margin-left: 40px;
-	display: inline-block;
-	letter-spacing: 2px;
-	font-family: $open;
-	text-transform: uppercase;
+	 	font-size: 13px;
+	 	margin-left: 40px;
+		display: inline-block;
+		letter-spacing: 2px;
+		font-family: $open;
+		text-transform: uppercase;
 		@media screen and (max-width: $tablets) {
 		font-size: 0.75rem;
 		margin-left: 25px;
@@ -106,9 +111,10 @@ text-align: center;
 
 
 .hero-slide  {
-width: 100%;
-//overflow-x: hidden;
-}
+	width: 100%;
+ }
+
+
 
 h1 {
 	font-family: $old;
@@ -117,20 +123,25 @@ h1 {
 	text-transform: uppercase;
 	line-height: 150%;
 	font-size: 30px;
-	margin: 100px 0px 30px auto;
-		@media screen and (max-width: $tablets) {
-			font-size: 20px;
-		}
+	font-weight: bold;
+	margin: 75px 0px 30px auto;
+	@media screen and (max-width: $tablets) {
+		font-size: 20px;
+	}
 
 }
+
+
 
 h2 {
 	@extend h1;
 	font-size: 24px;
-		@media screen and (max-width: $tablets) {
-			font-size: 16px;
-		}
+	@media screen and (max-width: $tablets) {
+		font-size: 16px;
+	}
 }
+
+
 
 hr {
 	width: 145px;
@@ -138,6 +149,8 @@ hr {
 	background: $blue;
 	border: none;
 }
+
+
 
 #description {
 	font-family: $open;
@@ -147,12 +160,15 @@ hr {
 	font-size: 18px;
 	font-weight: 300;
 	line-height: 150%;
-		@media screen and (max-width: $tablets) {
-			font-size: 14px;
-			margin: 30px 0 0 20%;
-			width: 60%;
-		}
+	@media screen and (max-width: $tablets) {
+		font-size: 14px;
+		margin: 30px 0 0 20%;
+		width: 60%;
+	}
 }
+
+
+
 
 // HOW IT WORKS
 	
@@ -166,12 +182,10 @@ hr {
 		margin-top: 19.85px / 959.25px * 100%;
 		margin-left: 19.85px / 959.25px * 2 * 100%;
 	}
-
 	@media screen and (max-width: $phones) {
 		width: 860px / 959.25px * 100%;
 		//margin-left: 19.85px / 959.25px * 100%;
 	}
-	
 	span {
 		font-family: $old;
 		color: white;
@@ -179,14 +193,12 @@ hr {
 		margin: 10px;
 		float: left;
 	}
-
 	.rect {
 		width: 100%;
 		height: 130px;
 		background-color: $blue;
 		float: left;
 	}
-
 	p {
 		width: 100%;
 		font-family: $open;
@@ -202,9 +214,287 @@ hr {
 
 }
 
+
+
 .wrapper {
 	width: 75%;
 	margin-left: 12.5%;
+	margin-bottom: 50px;
 	float: left;
 	box-sizing: border-box;
 }
+
+
+
+#plan {
+	background-color: $blue;
+	color: white;
+	#plan-wrapper {
+		width: 80%;
+		margin: 0 auto;
+	}
+	span {
+		font-family: $old;
+	}
+	label {
+		font-family: $open;
+	}
+	input, select, textarea,  {
+		height: 50px;
+		border: solid 1px $lblue !important;
+ 		background-color: $blue !important;
+		color: $lblue;
+		font-family: $open;
+		font-size: 1rem;
+		margin-right: 3.8%;
+		margin-top: 25px;
+		box-sizing: border-box;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		@media screen and (max-width: $tablets) {
+			font-size: 12px;
+		}
+	}
+
+	#range {
+		width: 50%;
+		padding-left: 10px;
+		color: $lblue !important;
+		@media screen and (max-width: $tablets) {
+			width: 100%;
+			margin: 25px auto 0 auto;
+		}
+	}
+
+	#datepicker, #location, #datepicker {
+		width: 20%;
+		-webkit-appearance: none;
+		-webkit-border-radius: 0px;
+		-moz-appearance: none;
+		padding-left: 15px;
+		@media screen and (max-width: $tablets) {
+			width: 48%;
+		}
+		@media screen and (max-width: $phones) {
+			width: 100%;
+		}
+	}
+
+		#location {
+			margin-right: 0px;
+		}
+
+		#datepicker {
+			@media screen and (max-width: $tablets) {
+				margin-right: 2%;
+			}
+			
+		}
+
+		.hasDatepicker:after {
+			content: '/25BC';
+		}
+		::-webkit-input-placeholder {
+			color: $lblue;
+		}
+		input[type=checkbox] {
+			width: 20px;
+			height: 20px;
+			background-color: $blue;
+			border: solid 1px $lblue !important;
+
+
+		}
+		li {
+			display: inline-block;
+			width: 200px;
+		}
+		label {
+			color: $lblue;
+			display: inline-block;
+			margin: -24px 14px 0px 27px;
+			float: right;
+
+		}
+		textarea {
+			width: 100%;
+			height: 165px;
+			padding: 15px;
+		}
+
+	button {
+		background-color: $lblue;
+		color: white;
+		border: none;
+		text-transform: uppercase;
+			margin:	50px auto 0px auto;
+		font-size: 18px;
+		font-family: $old;
+		box-sizing: border-box;
+		padding: 10px 25px 10px 25px;
+		letter-spacing: 2px;
+		display: block;
+		&:hover {
+			background: white;
+			color: $lblue;
+		}
+		@media screen and (max-width: $tablets) {
+			font-size: 12px;
+		}
+
+ 
+ 	}
+}
+
+
+
+#happy {
+	margin: 0px;
+	hr {
+		background-color: $blue;
+		border: none;
+		margin: 0 0 20px 0;
+		width: 100%;
+		height: 1px;
+		display: block;
+		float: left;
+		&:last-child {
+			margin-top: 0px;
+			margin-bottom: 0px;
+
+		}
+ 	}
+	h1 {
+		margin-top: 15px;
+	}
+	li {
+		display: inline-block;
+		border: solid 1px $blue;
+		padding: 10px;
+		width: 250px / 943px * 100%;
+		height: 250px;
+		margin-left: 3%;
+		@media screen and (max-width: $tablets) {
+			width: 250px / 943px * 3 * 100%;
+			margin: 25px auto;
+			display: block;
+ 		}
+	}
+	.hp1 {
+		background-image: url('../images/happy.png');
+		background-repeat: no-repeat;
+		background-size: cover;
+		width: 100%;
+		height: 100%;
+			@media screen and (max-width: $tablets) {
+				background-position-y: 40%;
+			}
+	}
+	.hp2 {
+		@extend .hp1;
+		background-image: url('../images/happy2.png');
+	}
+	.hp3 {
+		@extend .hp2;
+		background-image: url('../images/happy3.png');
+	}
+
+}
+
+
+
+
+
+#contact {
+ 	background-color: $blue;
+	color: white;
+		hr {
+			width: 145px;
+			height: 3px;
+			background: white;
+			border: none;
+		}
+		p {
+			font-size: 24px;
+			font-family: $old;
+			text-align: center;
+			letter-spacing: 2px;
+			margin-top: 25px;
+			@media screen and (max-width: $tablets) {
+				font-size: 1rem;
+			}
+			&::before {
+				@extend .sprites-sprite;
+			  	width: 32px;
+			 	height: 32px;
+			  	content: '';
+			  	display: inline-block;
+			  	background-position: 0px 0px;
+			  	margin-right: 15px;
+		  		@media screen and (max-width: $phones) {
+		  			position: absolute;
+		  			margin: -50px 0 0 85px;
+		  		}
+
+			}
+			&:nth-child(3) {
+				margin-top: 100px;
+				@media screen and (max-width: $phones) {
+					margin-bottom: 100px;
+				}
+				&::before {
+					@extend .sprites-sprite;
+				  	width: 32px;
+				 	height: 32px;
+				  	content: '';
+				  	display: inline-block;
+				  	background-position: 0px -293px;
+				  	margin-right: 20px;
+			  		@media screen and (max-width: $phones) {
+		  				position: absolute;
+		  				margin: -50px 0px 0px 50px;
+		  			}
+				}
+			
+			}
+
+		}
+
+	ul {
+		display: block;
+		margin: 50px auto 0 auto;
+		width: 170px;
+		}
+	li {
+		display: inline-block;
+		font-size: 18px;
+		margin-right: 25px;
+		color: $lblue;
+	}
+}
+
+
+// FOOTER
+
+footer {
+	height: 100px;
+	width: 100%;
+	.wrapper {
+		margin-bottom: 25px;
+	}
+	ul {
+	width: 90%;
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+
+	}
+	li {
+		display: inline-block;
+		font-family: $open;
+		font-size: 12px;
+	}
+}
+
+
